--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
 :root {
     --black-color: #141414;
     --red-color: #f5112c;
+    --blue-color: #2429ff;
+    --grey-color: #f5f5f5;
+    --grey-line-color: #e9e9e9;
 }
 
 @font-face {
@@ -161,12 +164,14 @@ input[type='search']::-webkit-search-results-decoration {
 }
 
 .hero__container::before {
-    content: url(/img/circle.svg);
+    content: "";
     position: absolute;
-    width: 25px;
-    height: 25px;
     top: 91px;
-    right: 449px;
+    right: 451px;
+    width: 23px;
+    height: 23px;
+    border-radius: 100%;
+    background-color: var(--blue-color);
 }
 
 .hero__container::after {
@@ -231,6 +236,7 @@ input[type='search']::-webkit-search-results-decoration {
     position: relative;
     padding-top: 163px;
     padding-bottom: 227px;
+    margin-bottom: 153px;
 }
 
 .situations__title {
@@ -242,8 +248,6 @@ input[type='search']::-webkit-search-results-decoration {
     position: absolute;
     top: 127px;
     left: 662px;
-    width: 145px;
-    height: 220px;
 }
 
 .situations__list {
@@ -260,10 +264,40 @@ input[type='search']::-webkit-search-results-decoration {
     margin-bottom: 84px;
 }
 
+.situations__item-1::before {
+    content: "";
+    position: absolute;
+    left: 667px;
+    top: 438px;
+    width: 2px;
+    height: 338px;
+    background-color: var(--grey-line-color);
+}
+
 .situations__item-3 {
     justify-content: flex-end;
     position: relative;
     padding-bottom: 239px;
+}
+
+.situations__item-3::before {
+    content: "";
+    position: absolute;
+    left: 277px;
+    width: 2px;
+    height: 449px;
+    background-color: var(--grey-line-color);
+}
+
+.situations__item-3::after {
+    content: "";
+    position: absolute;
+    left: 267px;
+    top: 93px;
+    width: 23px;
+    height: 23px;
+    border-radius: 100%;
+    background-color: var(--blue-color);
 }
 
 .situations__descr {
@@ -346,6 +380,227 @@ input[type='search']::-webkit-search-results-decoration {
 
 .situations__img-4 {
     margin-right: 39px;
+}
+
+/*About*/
+.about__container {
+    position: relative;
+    margin-bottom: 244px;
+}
+
+.about__title {
+    position: relative;
+    margin-bottom: 138px;
+    width: 500px;
+}
+
+.about__title::after {
+    content: "";
+    position: absolute;
+    top: 141px;
+    left: 0;
+    width: 65px;
+    height: 7px;
+    background-color: var(--red-color);
+}
+
+.about__item {
+    width: 238px;
+    letter-spacing: 1.9px;
+}
+
+.about__item:not(:last-child) {
+    margin-right: 54px;
+}
+
+.about__list {
+    display: flex;
+    position: relative;
+    padding-left: 24px;
+}
+
+.about__list::after {
+    content: url(/img/wave.svg);
+    position: absolute;
+    top: 243px;
+    right: 220px;
+}
+
+.about__item-title {
+    position: relative;
+    margin-bottom: 14px;
+    font-weight: 800;
+}
+
+.about__item-title::before {
+    content: "";
+    position: absolute;
+    top: -26px;
+    left: -23px;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background-color: var(--grey-color);
+    z-index: -1;
+}
+
+.about__item-descr {
+    line-height: 26.6px;
+}
+
+.about__img {
+    position: absolute;
+    top: -240px;
+    right: 0;
+} 
+
+/*Teachers*/
+.teachers__container {
+    margin-bottom: 100px;
+}
+
+.teachers__list {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.teachers__list::after {
+    content: url(/img/waves.png);
+    position: absolute;
+    top: 156px;
+    right: -236px;
+}
+
+.teachers__title {
+    margin-bottom: 47px;
+    position: relative;
+}
+
+.teachers__title::after {
+    content: url(/img/bagel-grey.svg);
+    position: absolute;
+    top: -45px;
+    right: -236px;
+    z-index: -1;
+}
+
+.teachers__img {
+    margin-bottom: 26px;
+}
+
+.teachers__name {
+    margin-bottom: 10px;
+    font-weight: 800;
+}
+
+.teachers__descr {
+    width: 366px;
+    line-height: 24.6px;
+    font-size: 14px;
+}
+
+.teachers__item {
+    letter-spacing: 0.9px;
+}
+
+.teachers__item-1,
+.teachers__item-2 {
+    position: relative;
+}
+
+.teachers__item-1::before {
+    content: "";
+    position: absolute;
+    top: 166px;
+    left: -390px;
+    width: 390px;
+    height: 2px;
+    background-color: var(--grey-line-color);
+}
+
+.teachers__item-1::after {
+    content: "";
+    position: absolute;
+    left: -148px;
+    top: 156px;
+    width: 23px;
+    height: 23px;
+    border-radius: 100%;
+    background-color: var(--blue-color);
+}
+
+.teachers__item-2::before {
+    content: "";
+    position: absolute;
+    left: -29px;
+    top: 166px;
+    width: 30px;
+    height: 2px;
+    background-color: var(--grey-line-color);
+}
+
+.teachers__item-2::after {
+    content: "";
+    position: absolute;
+    top: 166px;
+    right: -21px;
+    width: 27px;
+    height: 2px;
+    background-color: var(--grey-line-color);
+}
+
+/*Programm*/
+.programm__container {
+    padding-top: 112px;
+    padding-left: 780px;
+    background: url(/img/bigben.png) no-repeat;
+}
+
+.programm__title {
+    position: relative;
+    margin-bottom: 80px;
+}
+
+.programm__title::before {
+    content: "";
+    position: absolute;
+    top: 86px;
+    left: 0;
+    width: 65px;
+    height: 7px;
+    background-color: var(--red-color);
+}
+
+.programm__title::after {
+    content: url(/img/question.png);
+    position: absolute;
+    top: -63px;
+    right: 48px;
+}
+
+.programm__about-price {
+    margin-bottom: 15px;
+    font-size: 45px;
+    letter-spacing: 1.9px;
+    color: var(--red-color);
+}
+
+.programm__about-descr {
+    margin-bottom: 38px;
+    width: 687px;
+    letter-spacing: 1.9px;
+    line-height: 26px;
+}
+
+.programm__about-list {
+    display: flex;
+
+    flex-wrap: wrap;
+}
+
+.programm__about-item {
+    width: 300px;
 }
 
 
