--- a/styles/style.css
+++ b/styles/style.css
@@ -556,28 +556,11 @@ input[type='search']::-webkit-search-results-decoration {
 }
 
 .programm__container {
+    padding-top: 155px;
     padding-left: 780px;
-    padding-bottom: 49px;
-    background: url(/img/bigben.png) no-repeat 0 -130px;
-}
-
-.programm__bagel-grey {
-    position: absolute;
-    top: 271px;
-    left: 109px;
-    z-index: -1;
-}
-
-.programm__bagel-blue {
-    position: absolute;
-    top: 198px;
-    left: 167px;
-}
-
-.programm__wave {
-    position: absolute;
-    bottom: 314px;
-    left: 582px;
+    padding-bottom: 50px;
+    margin-bottom: 71px;
+    background: url(/img/bigben.png) no-repeat 0 25px;
 }
 
 .programm__title {
@@ -624,7 +607,7 @@ input[type='search']::-webkit-search-results-decoration {
 }
 
 .programm__about-item {
-    width: 330px;
+    max-width: 330px;
     margin-bottom: 29px;
 }
 
@@ -638,6 +621,155 @@ input[type='search']::-webkit-search-results-decoration {
 
 .programm__item-descr {
     line-height: 27px;
+}
+
+.programm__bagel-grey {
+    position: absolute;
+    top: 271px;
+    left: 109px;
+    z-index: -1;
+}
+
+.programm__bagel-blue {
+    position: absolute;
+    top: 198px;
+    left: 167px;
+}
+
+.programm__wave {
+    position: absolute;
+    bottom: 316px;
+    left: 582px;
+}
+
+/*How*/
+.how {
+    background: url(/img/5block-bg.svg) no-repeat;
+}
+
+.how__container {
+    padding-top: 50px;
+    padding-bottom: 241px;
+}
+
+.how__title {
+    position: relative;
+    margin-bottom: 85px;
+    width: 352px;
+}
+
+.how__title::before {
+    content: "";
+    position: absolute;
+    top: 142px;
+    left: 0;
+    width: 65px;
+    height: 7px;
+    background-color: var(--red-color);
+}
+
+.how__list {
+    display: flex;
+    flex-direction: column;
+}
+
+.how__item {
+    letter-spacing: 2px;
+    line-height: 28px;
+}
+
+.how__item-1 {
+    position: relative;
+    justify-content: flex-end;
+    display: flex;
+    margin-bottom: 72px;
+    background: url(/img/just.png) no-repeat 186px 65px;
+}
+
+.how__item-1::after {
+    content: url(/img/waves.png);
+    position: absolute;
+    top: 34px;
+    right: -36px;
+}
+
+.how__item-2 {
+    position: relative;
+    display: flex;
+    margin-bottom: 86px;
+    background: url(/img/communication.png) no-repeat 526px 57px;
+}
+
+.how__item-3 {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 77px;
+    background: url(/img/practice.png) no-repeat 5px 62px;
+}
+
+.how__item-4 {
+    position: relative;
+    display: flex;
+    background: url(/img/repeat.png) no-repeat 552px 72px;
+}
+
+.how__item-2::before {
+    content: "";
+    position: absolute;
+    top: -52px;
+    left: 51px;
+    width: 23px;
+    height: 23px;
+    border-radius: 100%;
+    background-color: var(--blue-color);
+}
+
+.how__item-img-2,
+.how__item-img-4 {
+    margin-right: 72px;
+}
+
+.how__item-about-1 {
+    padding-top: 104px;
+    margin-right: 73px;
+}
+
+.how__item-about-2 {
+    padding-top: 126px;
+}
+
+.how__item-about-3 {
+    padding-top: 106px;
+    margin-right: 73px;
+}
+
+.how__item-about-4 {
+    position: relative;
+    padding-top: 116px;
+}
+
+.how__item-about-4::before {
+    content: url(/img/bagel.svg);
+    position: absolute;
+    top: -41px;
+    left: -116px;
+}
+
+.how__item-title {
+    position: relative;
+    margin-bottom: 9px;
+    font-weight: 800;
+}
+
+.how__item-title::before {
+    content: url(/img/arrow.png);
+    position: absolute;
+    left: -36px;
+    top: -1px;
+}
+
+.how__item-descr {
+    width: 475px;
 }
 
 
