--- a/styles/style.css
+++ b/styles/style.css
@@ -140,11 +140,12 @@ input[type='search']::-webkit-search-results-decoration {
 .header__btn {
     margin-right: 3px;
     color: var(--red-color);
-    transition: border-bottom ease-in-out 0.5s;
+    transition: border-bottom ease-in-out 0.4s, font-size ease-in-out 0.4s;
 }
 
 .header__btn:hover {
     border-bottom: 1px solid var(--red-color);
+    font-size: 18px;
 }
 
 /*Hero*/
@@ -169,6 +170,7 @@ input[type='search']::-webkit-search-results-decoration {
     height: 23px;
     border-radius: 100%;
     background-color: var(--blue-color);
+    z-index: 1;
 }
 
 .hero__container::after {
@@ -193,6 +195,7 @@ input[type='search']::-webkit-search-results-decoration {
 }
 
 .hero__title {
+    position: relative;
     margin-bottom: 50px;
     width: 530px;
 }
@@ -200,7 +203,7 @@ input[type='search']::-webkit-search-results-decoration {
 .hero__title::before {
     content: "";
     position: absolute;
-    top: 364px;
+    top: 131px;
     width: 63px;
     height: 7px;
     background-color: var(--red-color);
@@ -426,8 +429,8 @@ input[type='search']::-webkit-search-results-decoration {
 .about__list::after {
     content: url(/img/wave.svg);
     position: absolute;
-    top: 243px;
-    right: 220px;
+    bottom: -153px;
+    right: -43px;
 }
 
 .about__item-title {
@@ -459,6 +462,19 @@ input[type='search']::-webkit-search-results-decoration {
 }
 
 /*Teachers*/
+.teachers {
+    position: relative;
+}
+
+.teachers::before {
+    content: "";
+    position: absolute;
+    top: 359px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--grey-line-color);
+}
 .teachers__container {
     padding: 90px 392px 0;
     margin-bottom: 58px;
@@ -515,16 +531,6 @@ input[type='search']::-webkit-search-results-decoration {
     margin-right: 19px;
 }
 
-.teachers__item-1::before {
-    content: "";
-    position: absolute;
-    top: 166px;
-    left: -390px;
-    width: 390px;
-    height: 2px;
-    background-color: var(--grey-line-color);
-}
-
 .teachers__item-1::after {
     content: "";
     position: absolute;
@@ -536,35 +542,19 @@ input[type='search']::-webkit-search-results-decoration {
     background-color: var(--blue-color);
 }
 
-.teachers__item-2::before {
-    content: "";
-    position: absolute;
-    left: -25px;
-    top: 166px;
-    width: 25px;
-    height: 2px;
-    background-color: var(--grey-line-color);
-}
-
-.teachers__item-2::after {
-    content: "";
-    position: absolute;
-    top: 166px;
-    right: -19px;
-    width: 25px;
-    height: 2px;
-    background-color: var(--grey-line-color);
-}
-
 /*Programm*/
 .programm {
     position: relative;
 }
 
 .programm__container {
-    padding: 157px 305px 53px 776px;
+    padding: 27px 305px 0 0;
+    display: flex;
     margin-bottom: 71px;
-    background: url(/img/bigben.png) no-repeat 0 23px;
+}
+
+.programm__img {
+    margin-right: 740px;
 }
 
 .programm__title {
@@ -585,8 +575,13 @@ input[type='search']::-webkit-search-results-decoration {
 .programm__title::after {
     content: url(/img/question.png);
     position: absolute;
-    top: -63px;
-    right: 48px;
+    top: -66px;
+    right: 133px;
+}
+
+.programm__about {
+    padding-top: 131px;
+    padding-left: 41px;
 }
 
 .programm__about-price {
@@ -643,7 +638,7 @@ input[type='search']::-webkit-search-results-decoration {
 
 .programm__wave {
     position: absolute;
-    bottom: 316px;
+    bottom: 315px;
     left: 582px;
 }
 
@@ -780,7 +775,7 @@ input[type='search']::-webkit-search-results-decoration {
 .reviews__container {
     padding: 0 392px 209px;
     padding-bottom: 209px;
-    margin-bottom: 115px;
+    margin-bottom: 50px;
 }
 
 .reviews__title {
@@ -814,6 +809,7 @@ input[type='search']::-webkit-search-results-decoration {
     height: 23px;
     border-radius: 100%;
     background-color: var(--blue-color);
+    z-index: -1;
 }
 
 .reviews__slider-container::after {
@@ -903,32 +899,27 @@ input[type='search']::-webkit-search-results-decoration {
 
 /*Sign-up*/
 .sign-up__container {
-    position: relative;
     display: flex;
-    padding: 115px 392px 120px;
+    padding: 140px 204px 189px;
+    position: relative;
 }
 
 .sign-up__container::before {
     content: url(/img/wave.svg);
     position: absolute;
-    top: 67px;
+    top: 149px;
     left: 743px;
 }
 
-.sign-up__img {
-    position: absolute;
-    top: 53px;
-    left: 203px;
-}
-
 .sign-up__info {
-    padding-top: 75px;
-    padding-left: 621px;
+    padding-top: 132px;
+    padding-left: 60px;
 }
 
 .sign-up__title {
     position: relative;
     margin-bottom: 54px;
+    width: 500px;
 }
 
 .sign-up__title::before {
@@ -942,10 +933,11 @@ input[type='search']::-webkit-search-results-decoration {
 }
 
 .sign-up__title::after {
-    content: url(/img/wave-phone.svg);
+    content: url(/img/wave.svg);
     position: absolute;
     top: -279px;
-    right: 6px;
+    right: -14px;
+    z-index: -1;
 }
 
 .sign-up__descr {
@@ -970,8 +962,8 @@ input[type='search']::-webkit-search-results-decoration {
 .sign-up__descr::after {
     content: url(/img/circles-blue.png);
     position: absolute;
-    top: -274px;
-    right: -178px;
+    top: -272px;
+    right: -79px;
 }
 
 /*Footer*/
@@ -999,6 +991,25 @@ input[type='search']::-webkit-search-results-decoration {
     display: inline-block;
     background: url(/img/socials-sprite.png) no-repeat;
     cursor: pointer;
+    transition: width ease-in-out 0.4s, height ease-in-out 0.4s;
+}
+
+.footer__socials--vk:hover {
+    width: 43px;
+    height: 25px;
+},
+.footer__socials--inst:hover {
+    width: 33px;
+    height: 33px;
+},
+.footer__socials--yt:hover,
+.footer__socials--ok:hover {
+
+}
+
+.footer__socials--yt:hover,
+.footer__socials--ok:hover {
+
 }
 
 .footer__socials--vk {
@@ -1034,7 +1045,7 @@ input[type='search']::-webkit-search-results-decoration {
 
 .footer__logo-link {
     position: absolute;
-    padding-top: 81px;
+    padding-top: 76px;
 }
 
 .footer__info {
