--- a/styles/style.css
+++ b/styles/style.css
@@ -1074,3 +1074,87 @@ input[type='search']::-webkit-search-results-decoration {
     margin-bottom: 16px;
 }
 
+/*Form*/
+.form {
+    position: relative;
+    display: block;
+	visibility: hidden;
+	transition: opacity ease-in-out 0.4s;
+	opacity: 0;
+	z-index: 10;
+}
+
+.form__overlay {
+    position: fixed;
+    display: flex;
+	align-items: center;
+	justify-content: center;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-color: rgba(187, 179, 181, 0.5);
+	width: 100%;
+}
+
+.form__container {
+    margin: 0 auto;
+	padding: 50px 50px;
+    width: 460px;
+    height: 685px;
+	background-color: #fff;
+	border: 2px solid  var(--blue-color);
+}
+
+.form__title {
+    margin-bottom: 40px;
+	font-size: 38px;
+	text-align: center;
+}
+
+.form__input span {
+	font-size: 30px;
+	font-weight: 700;
+	max-width: 100px;
+}
+
+.form__input input {
+    display: flex;
+    margin: 0 auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	padding-left: 20px;
+	font-size: 20px;
+	width: 100%;
+	height: 50px;
+	background-color: rgba(231, 218, 221, 0.5);
+	border: 1px solid var(--red-color);
+}
+
+.form__btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+	margin-top: 50px;
+}
+
+.error {
+	background-color: rgba(255, 0, 0, 0.37) !important;
+}
+
+.scroll {
+	overflow: hidden;
+}
+
+.alert {
+    display: none;
+    padding: 50px 50px;
+	font-size: 40px;
+	text-align: center;
+	width: 550px;
+	height: 350px;
+	background-color: #fff;
+	border: 10px solid var(--red-color);
+}
+
