--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ body {
     font-size: 18px;
     font-family: "Gilroy";
     letter-spacing: 0.8px;
+    outline: none;
 }
 
 .btn-fill {
@@ -1065,6 +1066,16 @@ input[type='search']::-webkit-search-results-decoration {
     margin-right: 29px;
 }
 
+.footer__btn {
+    transition: border-bottom ease-in-out 0.4s, color ease-in-out 0.4s, font-size ease-in-out 0.4s;
+}
+
+.footer__btn:hover {
+    border-bottom: 1px solid var(--red-color);
+    color: var(--red-color);
+    font-size: 18px;
+}
+
 .footer__descr {
     letter-spacing: 2px;
 }
@@ -1127,7 +1138,8 @@ input[type='search']::-webkit-search-results-decoration {
 	width: 100%;
 	height: 50px;
 	background-color: rgba(231, 218, 221, 0.5);
-	border: 1px solid var(--red-color);
+    border: 1px solid rgba(231, 218, 221, 0.5);
+    outline: none;
 }
 
 .form__btn {
